--- a/MM1.1PickingAnImage/Base.lproj/Main.storyboard
+++ b/MM1.1PickingAnImage/Base.lproj/Main.storyboard
@@ -34,14 +34,14 @@
                                         </variation>
                                     </imageView>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="TOP" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MMb-by-X4f">
-                                        <rect key="frame" x="16" y="20" width="568" height="100"/>
+                                        <rect key="frame" x="16" y="20" width="568" height="80"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="45"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="BOTTOM" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C8u-li-i5F">
-                                        <rect key="frame" x="16" y="372" width="568" height="100"/>
+                                        <rect key="frame" x="16" y="392" width="568" height="80"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="45"/>
@@ -54,14 +54,14 @@
                                     <constraint firstAttribute="trailing" secondItem="C8u-li-i5F" secondAttribute="trailing" constant="16" id="Lmf-2c-F6V"/>
                                     <constraint firstAttribute="bottom" secondItem="C8u-li-i5F" secondAttribute="bottom" constant="20" id="NmB-t8-dnI"/>
                                     <constraint firstAttribute="trailing" secondItem="MMb-by-X4f" secondAttribute="trailing" constant="16" id="PBh-Fm-uBH"/>
-                                    <constraint firstItem="g8O-vn-Zsu" firstAttribute="top" secondItem="MMb-by-X4f" secondAttribute="bottom" constant="-120" id="QRu-wT-tD8"/>
+                                    <constraint firstItem="g8O-vn-Zsu" firstAttribute="top" secondItem="MMb-by-X4f" secondAttribute="bottom" constant="-100" id="QRu-wT-tD8"/>
                                     <constraint firstItem="g8O-vn-Zsu" firstAttribute="top" secondItem="w0m-C2-DpZ" secondAttribute="top" id="XlK-82-vxB"/>
                                     <constraint firstItem="MMb-by-X4f" firstAttribute="leading" secondItem="w0m-C2-DpZ" secondAttribute="leading" constant="16" id="YSb-WL-GCk"/>
                                     <constraint firstItem="C8u-li-i5F" firstAttribute="leading" secondItem="w0m-C2-DpZ" secondAttribute="leading" constant="16" id="Ymg-U7-fvP"/>
                                     <constraint firstAttribute="trailing" secondItem="g8O-vn-Zsu" secondAttribute="trailing" id="Yn6-MX-MrZ"/>
                                     <constraint firstAttribute="bottom" secondItem="g8O-vn-Zsu" secondAttribute="bottom" id="ak5-bh-kVz"/>
                                     <constraint firstItem="C8u-li-i5F" firstAttribute="top" relation="lessThanOrEqual" secondItem="MMb-by-X4f" secondAttribute="bottom" constant="346" id="ejK-RN-VBX"/>
-                                    <constraint firstItem="C8u-li-i5F" firstAttribute="top" secondItem="g8O-vn-Zsu" secondAttribute="bottom" constant="-120" id="k5V-1x-hFz"/>
+                                    <constraint firstItem="C8u-li-i5F" firstAttribute="top" secondItem="g8O-vn-Zsu" secondAttribute="bottom" constant="-100" id="k5V-1x-hFz"/>
                                 </constraints>
                                 <variation key="default">
                                     <mask key="constraints">
@@ -88,7 +88,7 @@
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="UJu-bs-ur1"/>
                         <barButtonItem title="Album" id="HQo-yF-cMA">
                             <connections>
-                                <action selector="pickAnImage:" destination="BYZ-38-t0r" id="RD7-tm-2Ne"/>
+                                <action selector="pickAnImageFromAlbum:" destination="BYZ-38-t0r" id="kMz-bI-ecE"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="LCg-X1-gxY"/>
@@ -99,10 +99,15 @@
                                 <action selector="displayActivityVC:" destination="BYZ-38-t0r" id="mdz-4H-0M3"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="cancel" id="tXg-nK-kUc"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="cancel" id="tXg-nK-kUc">
+                            <connections>
+                                <action selector="cancelButton:" destination="BYZ-38-t0r" id="DCb-3I-Fsg"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="actionButton" destination="iGQ-Zo-NSG" id="o3c-rY-DND"/>
                         <outlet property="bottomTextFieldConstrain" destination="NmB-t8-dnI" id="PTh-48-1QX"/>
                         <outlet property="bottomTextfield" destination="C8u-li-i5F" id="AEm-7I-LLV"/>
                         <outlet property="cameraButton" destination="Mow-Sb-69p" id="8PM-Ku-l7Q"/>
