--- a/MM1.1PickingAnImage/Base.lproj/Main.storyboard
+++ b/MM1.1PickingAnImage/Base.lproj/Main.storyboard
@@ -128,10 +128,10 @@
             </objects>
             <point key="canvasLocation" x="1235" y="410"/>
         </scene>
-        <!--Main Editor View Controller-->
+        <!--Image Editor View Controller-->
         <scene sceneID="t7g-wy-Zpc">
             <objects>
-                <viewController storyboardIdentifier="MainEditor" id="Klx-70-7IZ" customClass="IMGLYMainEditorViewController" customModule="imglyKit" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MainEditor" id="Klx-70-7IZ" customClass="DPPImageEditorViewController" customModule="MM1_1PickingAnImage" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="KeM-8Q-CQD"/>
                         <viewControllerLayoutGuide type="bottom" id="jaS-wr-5fq"/>
@@ -139,9 +139,18 @@
                     <view key="view" contentMode="scaleToFill" id="DbY-PK-8y0">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Su8-Su-y3U" customClass="IMGLYZoomingImageView" customModule="imglyKit">
+                                <rect key="frame" x="0.0" y="20" width="600" height="449"/>
+                                <animations/>
+                            </scrollView>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="previewImageView" destination="Su8-Su-y3U" id="W0p-RJ-xsL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TBH-9e-EFl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
